--- a/runner.html
+++ b/runner.html
@@ -5,11 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <!-- Mocha styles. -->
-        <link rel="stylesheet" href="../../node_modules/mocha/mocha.css" />
+        <link rel="stylesheet" href="node_modules/mocha/mocha.css" />
     </head>
     <body>
         <div id="mocha"></div>
-        <div id="fixtures"></div>
-        <script data-main="config" src="../../node_modules/requirejs/require.js"></script>
+        <script data-main="config" src="node_modules/requirejs/require.js"></script>
     </body>
 </html>
